# life_automation

obsidian_tools/: README.md  pyproject.toml
obsidian_tools/src/service/: main.py
obsidian_tools/src/service/config/: __init__.py  settings.toml
