[tool.poetry]
name = "obsidian_tools"
version = "0.1.0"
description = "Automate some tasks to be done with obsidian"
authors = ["Gonzalo Garcia <gonzalogarcia243@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
watchdog = "^0.10.3"
google-api-python-client = "^1.10.0"
google-auth-httplib2 = "^0.0.4"
google-auth-oauthlib = "^0.4.1"
dynaconf = "^3.0.0"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
coverage = "^5.2.1"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
